# cpp-template

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: cpp-template.cpp  cpp-template.h  main.cpp
tests/: CMakeLists.txt  cpp-template.cpp
